styles.css
*,*::before,*::after{
    margin: 0;
    box-sizing: border-box;
}
:root{
    --primary-light-hsl: 200, 100%, 91%;
    --primary-hsl: 200, 100%, 50%;
    --primary-dark-hsl: 200, 100%, 6%;
}
body{
    margin: 0;
    background-color: #1d1d1d;
}
.container{
    height: 100vh;
    width: 100vw;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.ui{
    display: flex;
    background-color: #1a1a1a;
    justify-content: center;
    align-items: center;
    height: 30%;
    width: 50%;
    box-shadow: 0 0 0 2px hsl(var(--primary-hsl), .4);
    color: white;
    font-weight: bold;
    font-size: 32px;
}
.scoreboard{
    font-size: 18px;
    display: inline-flex;
    position: relative;
    top: -145px;
    right: -510px;
}
.game-menu{
    flex-direction: row;
    gap: 15px;
    display: flex;
    align-items:center;
    justify-content: center;
    margin-top: 20px;
}
.button{
    padding: 20px 60px 20px 60px;     
    border: none;
    outline: none;
    font-size: 14px;
    font-weight: lighter;
    color: white;
    background-color: hsl(var(--primary-light-hsl),.2);
    border-radius: 20px;
    box-shadow: 0 0 0 1px hsl(var(--primary-hsl));
}
.button:focus, .button:hover{
background-color: hsl(var(--primary-hsl), 0.4);
cursor: pointer;
font-weight: bold;
}

